Changes made between Gamera File Releases
=========================================

 - new plugin kfill (category "Filter")

 - runlength_smearing and projection_cutting now also work
   on views with non zero offset

 - computation of some features corrected:
    o nholes (white rows/cols made whole count negative)
    o nholes_extended (normalization for scale invariance was missing)
    o compactness (border pixels were formerly ignored in computation)
    o skeleton_features (crossings through x/y-axis was erronously computed)

 - default range for Real made smaller than sys.maxint,
   so that it should now also work on 64bit architectures

 - new Python image methods white() and black() for obtaining
   these colors in the pixel type representation of the image

 - writing TIFFs on 64bit systems corrected


Version 3.2.4, Feb 12, 2010
----------------------------

 - new deformation plugins degrade_kanungo and white_speckles

 - new plugins colors_to_labels (category "Color") and
   ccs_from_labeled_image (category "Utility") for reading
   manually labeled ground truth data (thanks to Hasan Yilidz)

 - corrected border treatment in neighbor.hpp (affected mean
   and rank) and fixed another error in the rank filter

 - plugin category cleanup:
    o "Convolution" moved to "Filter"
    o new category "Thinning"
    o new category "Transformation" for rotate, scale etc.
    o category "Threshold" moved to "Binarization"

 - new plugins for area Voronoi tesselation (category "Geometry")

 - new plugin labeled_region_edges (category "Edge")

 - display of classifier glyphs corrected when adding
   glyphs to the classifier (can be slow for large databases)

 - new image type MultiLabelCC (C++) resp. MlCc (Python)

 - the set() method now works for connected components


Version 3.2.3, Oct 08, 2009
----------------------------

 - documentation licensed under CC-BY-SA
   see the bottom of doc/src/index.txt for details
