@@ -1,13 +1,11 @@
 ToDo list for Gamera
 ====================
 
- - plugin trim_image for ONEBIT images
  - More documentation of wrapped Vigra functions
  - More page layout analysis resp. page segmentation methods.
    E.g. text/graphics separation and more text line finding
    algorithms. Maybe some parts of Leptonica could be useful?
- - Add some preprocessing operations like kfill or other local
-   thresholding methods and multilevel thresholding.
+ - Add multilevel thresholding.
  - Feature selection via genetic algorithms (GA) as an alternative
    to the currently implemented GA based feature weighting.
  - A new menu function in the interactive classifier dialog for
