@@ -1,7 +1,7 @@
 /*
  *
  * Copyright (C) 2001-2005 Ichiro Fujinaga, Michael Droettboom, Karl MacMillan
- *               2010      Christoph Dalitz
+ *               2010      Christoph Dalitz, Oliver Christen
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -169,90 +169,113 @@ namespace Gamera {
     }
   }
   // get n, r, c
-  void kfill_get_condition_variables(OneBitImageView *tmp, int k, int x, int y, int *n, int *r, int *c) {
+  void kfill_get_condition_variables(OneBitImageView *tmp, int k, int x, int y, int size_x, int size_y, int *n, int *r, int *c) {
 		
-    Point ul; // upper left corner of current window
-    Point ur; // upper right corner of current window
-    Point ll; // lower left corner of current window
-    Point lr; // lower right corner of current window
-		
+    // upper left corner of current window
+    int ul_x;
+    int ul_y;
+    // upper right corner of current window
+    int ur_x;
+    int ur_y;
+    // lower left corner of current window
+    int ll_x;
+    int ll_y;
+    // lower right corner of current window
+    int lr_x;
+    int lr_y;
+
     int nnp = 4*(k-1); // total number of neighborhood pixels
-		
-    int *nh_pixel = new int[nnp]; // array for neighborhood pixel
+    int* nh_pixel = new int[nnp]; // array for neighborhood pixel
     int nh_pixel_count = 0;
     int corner_pixel_count;
     int nh_ccs;
-		
-    int pixelvalue;
-    int i = 0;
+    OneBitPixel pixelvalue;
 		
     // calculate window borders
-    ul.x( x - 1 );
-    ul.y( y - 1 );
-		
-    ur.x( x + k - 2 );
-    ur.y( y - 1 );
-		
-    ll.x( x - 1 );
-    ll.y( y + k - 2 );
-		
-    lr.x( x + k - 2 );
-    lr.y( y + k - 2 );
-		
+    ul_x = ( x - 1 );
+    ul_y = ( y - 1 );
+    ur_x = ( x + k - 2 );
+    ur_y = ( y - 1 );
+    ll_x = ( x - 1 );
+    ll_y = ( y + k - 2 );
+    lr_x = ( x + k - 2 );
+    lr_y = ( y + k - 2 );
+										
     // fill array with neighborhood and count neighborhood ON pixel
-    for( unsigned int ul_to_ur_np = ul.x() ; ul_to_ur_np < ur.x() ; ul_to_ur_np++ ) {
-      pixelvalue = (*tmp).get( Point(ul_to_ur_np, y - 1) );
+    int i = 0;
+    for( int ul_to_ur_np = ul_x ; ul_to_ur_np < ur_x ; ul_to_ur_np++ ) {
+		
+      if(ul_to_ur_np < 0 || y-1 < 0 ) {
+        pixelvalue = 0;
+      } else {
+        pixelvalue = (*tmp).get( Point(ul_to_ur_np, y - 1) );
+      }
 			
-      nh_pixel[i++] = pixelvalue;
-      if( pixelvalue == is_black(tmp)) { nh_pixel_count++; }
+      nh_pixel[i++] = is_black(pixelvalue);
+      if (is_black(pixelvalue)) { nh_pixel_count++; }
+    }
+
+    for( int ur_to_lr_np = ur_y ; ur_to_lr_np < lr_y ; ur_to_lr_np++ ) {
+		
+      if(ur_to_lr_np < 0 || x + k - 2 > size_x - 1 ) {
+        pixelvalue = 0;
+      } else {
+        pixelvalue = (*tmp).get( Point(x + k - 2, ur_to_lr_np) );
+      }
+			
+      nh_pixel[i++] = is_black(pixelvalue);
+      if (is_black(pixelvalue)) { nh_pixel_count++; }
     }
 		
-    for( unsigned int ur_to_lr_np = ur.y() ; ur_to_lr_np < lr.y() ; ur_to_lr_np++ ) {
-      pixelvalue = (*tmp).get( Point(x + k - 2, ur_to_lr_np) );
-			
-      nh_pixel[i++] = pixelvalue;
-      if( pixelvalue == is_black(tmp)) { nh_pixel_count++; }
-    }
+    for( int lr_to_ll_np = lr_x ; lr_to_ll_np > ll_x ; lr_to_ll_np-- ) {
 		
-    for( unsigned int lr_to_ll_np = lr.x() ; lr_to_ll_np > ll.x() ; lr_to_ll_np-- ) {
-      pixelvalue = (*tmp).get( Point(lr_to_ll_np, y + k - 2) );
+      if( lr_to_ll_np > size_x - 1 || y + k - 2 > size_y - 1 ) {
+        pixelvalue = 0;
+      } else {
+        pixelvalue = (*tmp).get( Point(lr_to_ll_np, y + k - 2) );
+      }
 			
-      nh_pixel[i++] = pixelvalue;
-      if( pixelvalue == is_black(tmp)) { nh_pixel_count++; }
+      nh_pixel[i++] = is_black(pixelvalue);
+      if (is_black(pixelvalue)) { nh_pixel_count++; }
     }
-		
-    for( unsigned int ll_to_ul_np = ll.y() ; ll_to_ul_np > ul.y() ; ll_to_ul_np-- ) {
-      pixelvalue = (*tmp).get( Point(x - 1, ll_to_ul_np) );
 			
-      nh_pixel[i++] = pixelvalue;
-      if( pixelvalue == is_black(tmp)) { nh_pixel_count++; }
-    }
+    for( int ll_to_ul_np = ll_y ; ll_to_ul_np > ul_y ; ll_to_ul_np-- ) {
 		
+      if(x - 1 < 0 || ll_to_ul_np > size_y - 1 ) {
+        pixelvalue = 0;
+      } else {
+        pixelvalue = (*tmp).get( Point(x - 1, ll_to_ul_np) );
+      }
+			
+      nh_pixel[i++] = is_black(pixelvalue);
+      if (is_black(pixelvalue)) { nh_pixel_count++; }
+    }
+						
     // count corner ON pixel
     corner_pixel_count = nh_pixel[(k-1)*0] + nh_pixel[(k-1)*1] + nh_pixel[(k-1)*2] + nh_pixel[(k-1)*3];
-		
+
     // get ccs in neighborhood
     nh_ccs = 0;
     for(int nhpixel = 0 ; nhpixel < i ; nhpixel++) {
       nh_ccs += abs( nh_pixel[(nhpixel+1)%nnp] - nh_pixel[nhpixel] );
     }
     nh_ccs /= 2;
-		
+
     *n = nh_pixel_count;
     *r = corner_pixel_count;
     *c = nh_ccs;
-		
-    delete nh_pixel;
+
+    delete[] nh_pixel;
   }
 	
   // the actual kfill implementation
   template<class T>
   OneBitImageView * kfill(const T &src, int k, int iterations) {
 		
-    /*
-      create a copy of the original image
-      kfill algorithm sets pixel ON/OFF information in this image
-    */
+    //
+    // create a copy of the original image
+    // kfill algorithm sets pixel ON/OFF information in this image
+    //
     OneBitImageData *res_data = new OneBitImageData( src.size(), src.origin() );
     OneBitImageView *res = new OneBitImageView(*res_data);
     image_copy_fill(src, *res);
@@ -284,24 +307,22 @@ namespace Gamera {
       changed =  false;
 			
       // move window over the image
-      for(y = 1 ; y < src_size_y - (k-2) ; y++) {
-        for(x = 1 ; x < src_size_x - (k-2) ; x++) {
+      for(y = 0 ; y < src_size_y - (k-3) ; y++) {
+        for(x = 0 ; x < src_size_x - (k-3) ; x++) {
 					
           // calculate lower right core coordinate
           c_lr.x( x + (k - 3) );
           c_lr.y( y + (k - 3) );
-					
+
           // count core ON pixel
           core_pixel = kfill_count_core_pixel(tmp, x, y, &c_lr);
-					
-          /*
-            ON filling requires ALL core pixels to be OFF
-          */
+
+          //
+          // ON filling requires ALL core pixels to be OFF
+          //
           if(core_pixel == 0) {
-						
             // get condition variables
-            kfill_get_condition_variables(tmp, k, x, y, &n, &r, &c);
-						
+            kfill_get_condition_variables(tmp, k, x, y, src_size_x, src_size_y, &n, &r, &c);
             // condition check
             if( (c <= 1) && ( (n > 3*k - 4) || (n == 3*k - 4) && (r == 2) ) ) {
               kfill_set_core_pixel(res, x, y, &c_lr, 1);
@@ -309,15 +330,13 @@ namespace Gamera {
             }
           }
 					
-          /*
-            OFF filling requires ALL core pixels to be ON
-          */				
+          //
+          // OFF filling requires ALL core pixels to be ON
+          //				
           if(core_pixel == ncp) {
-            kfill_get_condition_variables(tmp, k, x, y, &n, &r, &c);
+            kfill_get_condition_variables(tmp, k, x, y, src_size_x, src_size_y, &n, &r, &c);
             n = ( 4*(k-1) ) - n;
             r = 4 - r;
-						
-						
             // condition check
             if( (c <= 1) && ( (n > 3*k - 4) || (n == 3*k - 4) && (r == 2) ) ) {
               kfill_set_core_pixel(res, x, y, &c_lr, 0);
@@ -338,6 +357,83 @@ namespace Gamera {
     delete tmp->data();
     delete tmp;
 		
+    return res;
+  }
+
+
+  template<class T>
+  OneBitImageView * kfill_modified(const T &src, int k) {
+    /*
+      create a copy of the original image
+      kfill algorithm sets pixel ON/OFF information in this image
+    */
+    OneBitImageData *res_data = new OneBitImageData( src.size(), src.origin() );
+    OneBitImageView *res = new OneBitImageView(*res_data);
+		
+    OneBitImageData *tmp_data = new OneBitImageData( src.size(), src.origin() );
+    OneBitImageView *tmp = new OneBitImageView(*tmp_data);
+    image_copy_fill(src, *tmp);
+		
+    int src_size_x = src.ncols(); // source image size x
+    int src_size_y = src.nrows(); // source image size y
+		
+    int x, y; // windows position (upper left core coordinate)
+    Point c_lr; // windows position (lower right core coordinate)
+		
+    int ncp = (k-2) * (k-2);
+    float ncp_required = ncp / 2.0f; // number of core pixel required -- modified version
+		
+    int core_pixel; // number of ON core pixel
+		
+    int r; // number of pixel in the neighborhood corners
+    int n; // number of neighborhood pixel
+    int c; // number of ccs in neighborhood
+		
+    // move window over the image
+    for(y = 0 ; y < src_size_y - (k-3) ; y++) {
+      for(x = 0 ; x < src_size_x - (k-3) ; x++) {
+        // calculate lower right core coordinate
+        c_lr.x( x + (k - 3) );
+        c_lr.y( y + (k - 3) );
+				
+        // count core ON pixel
+        core_pixel = kfill_count_core_pixel(tmp, x, y, &c_lr);
+				
+        // ON >= (k-2)^2/2 ?
+        if(core_pixel >= ncp_required) {
+					
+          // Examine in the Neighborhood
+          kfill_get_condition_variables(tmp, k, x, y, src_size_x, src_size_y, &n, &r, &c);
+          n = ( 4*(k-1) ) - n;
+          r = 4 - r;
+					
+          // eq. satisfied?
+          if( (c <= 1) && ( (n > 3*k - 4) || (n == 3*k - 4) && (r == 2) ) ) {
+            kfill_set_core_pixel(res, x, y, &c_lr, 0);
+          } else {
+            kfill_set_core_pixel(res, x, y, &c_lr, 1);
+          }			
+					
+        } else {
+					
+          // Examine in the Neighborhood
+          kfill_get_condition_variables(tmp, k, x, y, src_size_x, src_size_y, &n, &r, &c);
+
+          // eq. satisfied?					
+          if( (c <= 1) && ( (n > 3*k - 4) || (n == 3*k - 4) && (r == 2) ) ) {
+            kfill_set_core_pixel(res, x, y, &c_lr, 1);
+          } else {
+            kfill_set_core_pixel(res, x, y, &c_lr, 0);
+          }
+
+        }
+								
+      } // end for x
+    } // end for y
+		
+    delete tmp->data();
+    delete tmp;
+
     return res;
   }
 
